"finalizando detalles nivel1"

--- a/src/app/component/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar.component.css
@@ -8,7 +8,7 @@
 }
 
 .nav-item {
-  margin: 0; /* Elimina los márgenes predeterminados */
+  margin: 0;
   text-align: center;
 
 }
@@ -25,18 +25,18 @@
   border-bottom: 2px solid blue;
 }
 
-/* Agrega un borde izquierdo para "HOME" */
+
 .nav-item:first-child .nav-link {
   border-left: 1px solid #ccc;
   padding-left: 10px;
-  margin-top: 5px; /* Margen superior */
-  margin-bottom: 5px; /* Margen inferior */
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-/* Agrega un borde derecho para "STARSHIPS" */
+
 .nav-item:last-child .nav-link {
   border-right: 1px solid #ccc;
   padding-right: 10px;
-  margin-top: 5px; /* Margen superior */
-  margin-bottom: 5px; /* Margen inferior */
+  margin-top: 5px;
+  margin-bottom: 5px; 
 }
